<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.haribooo.bookmyparcel.TermsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/blue">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/termhd"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/term1"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/term2"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt3"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/term3"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/term4"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt5"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/term5"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
