<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.haribooo.bookmyparcel.TermsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/blue">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/thank"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tx3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/reachus"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_below="@+id/tx3"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/logo" />


    </RelativeLayout>
</RelativeLayout>